update decision tree

--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -10,7 +10,45 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n"
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import nbformat\n",
+    "from nbconvert.preprocessors import ExecutePreprocessor\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc59030-5d27-46d2-9e8e-d60e4311ba95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Đường dẫn đến file tiền xử lý\n",
+    "preprocessing_file = \"Data_preprocessing.ipynb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b79a256c-90c5-4432-ae47-4eae5f840f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Đọc file tiền xử lý\n",
+    "with open(preprocessing_file, 'r') as f:\n",
+    "    preprocessing_nb = nbformat.read(f, as_version=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bef027-e62e-418f-8e03-4b8105e3ba0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Thực thi các cell trong file tiền xử lý\n",
+    "execute_preprocessor = ExecutePreprocessor(timeout=-1)  # Timeout = -1 để không có giới hạn thời gian\n",
+    "execute_preprocessor.preprocess(preprocessing_nb)"
    ]
   },
   {
