--- a/Data Visualization.ipynb
+++ b/Data Visualization.ipynb
@@ -87,7 +87,7 @@
    "id": "c4f6f228-ebae-451c-9f5a-e5cbb293bb29",
    "metadata": {},
    "source": [
-    "## 3.Phân phối theo giá histogram"
+    "### 3.Phân phối theo giá histogram"
    ]
   },
   {
@@ -118,19 +118,7 @@
     "plt.title('Phân phối giá của tài sản bất động sản', fontsize=14)\n",
     "plt.grid(True)\n",
     "\n",
-    "\n",
-    "\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b5790c6-d09a-4794-b313-c88377580a9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tập trung khoảng nào ????"
    ]
   },
   {
@@ -166,14 +154,6 @@
     "\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "998ce101-6a5f-44f6-91b6-a3a2e0a2d983",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -415,7 +395,7 @@
    "id": "3c6d1100-74f4-4fd1-b868-0dfa709e37b8",
    "metadata": {},
    "source": [
-    "## Câu 1 : Biểu Đồ Phạm vi giá cho (5000 điểm dữ liệu) boxplot"
+    "## Câu 1 : Biểu Đồ Phạm vi giá cho (5000 điểm dữ liệu) sử dụng boxplot"
    ]
   },
   {
@@ -636,7 +616,7 @@
     "# Tính số lượng tài sản bất động sản trong tập dữ liệu\n",
     "total_properties = df.shape[0]\n",
     "\n",
-    "print(f\"Có tổng cộng {total_properties} tài sản bất động sản trong tập dữ liệu.\")\n"
+    "print(f\"Có tổng cộng {total_properties} tài sản bất động sản trong tập dữ liệu.\")"
    ]
   },
   {
